# Edger

./: .gitignore  CMakeLists.txt  Edger.lnk  README.md  build.bat  chessplayers.txt
src/: AutoClicker.cpp  AutoClicker.h  Main.cpp
